-
Bug
-
Resolution: Done
-
Not Evaluated
-
None
-
Qt Creator 3.5.0-rc1
-
None
-
Windows 7, using Visual Studio 2013
CDB debugger from the "Windows SDK 8.1"
They are being sorted by the index converted to a string instead of index itself. See the attached image where index 19 appears before index 1.
- relates to
-
QTCREATORBUG-12931 sorting of std::vector elements in the debugger is wrong
-
- Closed
-
-
QTCREATORBUG-486 Sorting of array in variables window broken
-
- Closed
-
-
QTCREATORBUG-16813 QVector of QVectors debugging view is sorted wrong
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-14872 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 123255,3 | Cdbext: Do not sort container children. | 3.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |