Cdbext: Do not sort container children.

They are already sorted in an intended order.

Task-number: QTCREATORBUG-14872
Change-Id: If28d41eb220cb875fa5ef25f0fab075329900bff
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@theqtcompany.com>